--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -43,10 +43,10 @@
 
               <div class="form-group">
                 <div class="control-label col-sm-2">
-                  <%= f.label :zipcode %>
+                  <%= f.label :postal_code %>
                 </div>
                 <div class="col-sm-8">
-                  <%= f.text_field :zipcode, class: "form-control", placeholder: "Enter Your Zip Code", autofocus: true %>
+                  <%= f.text_field :postal_code, class: "form-control", placeholder: "Enter Your Postal Code", autofocus: true %>
                 </div>
               </div>
 
