add flash success handling

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,12 @@
         <%= error %><br>
       <% end %>
     </div>
+    <% elsif flash[:success] %>
+    <div class="alert alert-success">
+      <%= flash[:success] %>
+    </div>
     <% end %>
+
     <%= yield %>
 
     <div class="container">
@@ -34,6 +39,5 @@
         </small>
       </footer>
     </div>
-
   </body>
 </html>
