--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -36,6 +36,15 @@ body {
   border: 0;
 }
 
+#navbar {
+  background-color: green;
+}
+.navbar-brand {
+  background-color: green;
+}
+li {
+  background-color: green;
+}
 /*
  * Sidebar
  */
@@ -44,6 +53,8 @@ body {
 .sidebar {
   display: none;
 }
+
+
 @media (min-width: 768px) {
   .sidebar {
     position: fixed;
@@ -114,4 +125,5 @@ body {
   display: inline-block;
   border-radius: 50%;
 }
+
 
