--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,7 +38,7 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#">Profile</a></li>
+            <li"><a id="#logo href="#">Profile</a></li>
             <li><a href="#">Logout</a></li>
           </ul>
           <form class="navbar-form navbar-right">
