--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,13 +37,15 @@
           <a class="navbar-brand" href="#">BootBook</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
+          <!-- If current_user, show these -->
           <ul class="nav navbar-nav navbar-right">
-            <li"><a id="#logo href="#">Profile</a></li>
+            <li><a href="#">Profile</a></li>
             <li><a href="#">Logout</a></li>
           </ul>
           <form class="navbar-form navbar-right">
             <input type="text" class="form-control" placeholder="Search Boots...">
           </form>
+          <!--  -->
         </div>
       </div>
     </nav>
