--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,21 +49,26 @@
         </div>
       </div>
     </nav>
+
     <main class="main">
+      <div class="container-fluid">
+        <div class="row">
 
-    <% if flash[:danger] %>
-    <div class="alert alert-danger">
-      <% flash[:danger].each do |error|%>
-        <%= error %><br>
-      <% end %>
-    </div>
-    <% elsif flash[:success] %>
-    <div class="alert alert-success">
-      <%= flash[:success] %>
-    </div>
-    <% end %>
+        <% if flash[:danger] %>
+        <div class="alert alert-danger">
+          <% flash[:danger].each do |error|%>
+            <%= error %><br>
+          <% end %>
+        </div>
+        <% elsif flash[:success] %>
+        <div class="alert alert-success">
+          <%= flash[:success] %>
+        </div>
+        <% end %>
 
-    <%= yield %>
+        <%= yield %>
+        </div>
+      </div>
     </main>
     <div class="container">
       <footer class="footer">
