--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,52 @@
-<h1>Users#index</h1>
-<p>Find me in app/views/users/index.html.erb</p>
-<%  @users.each do |user| %>
-  <%= user.email %>
-<% end %>
+<div class="col-sm-3 col-md-2 sidebar">
+  <div class="row placeholders">
+    <div class="col-xs-6 col-sm-3 placeholder">
+      <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" width="200" height="200" class="img-responsive" alt="Generic placeholder thumbnail">
+      <h4>User's Name</h4>
+      <span class="text-muted">User's Cohort</span>
+      <!-- This 'if false' is just a way of commenting out this block -->
+      <!-- This should be commented back in once we have current_user -->
+      <% if false %>
+        <h4><%= current_user.first_name %> <%= current_user.last_name %></h4>
+        <% current_user.cohorts.each do |cohort| %>
+          <span class="text-muted"><%= cohort %></span>
+        <% end %>
+      <% end %>
+      <!-- Down to here. -->
+    </div>
+  </div>
+  <ul class="nav nav-sidebar">
+    <li class="active"><a href="#">Overview <span class="sr-only">(current)</span></a></li>
+    <li><a href="#">Reports</a></li>
+    <li><a href="#">Analytics</a></li>
+    <li><a href="#">Export</a></li>
+  </ul>
+  <ul class="nav nav-sidebar">
+    <li><a href="">Nav item</a></li>
+    <li><a href="">Nav item again</a></li>
+    <li><a href="">One more nav</a></li>
+    <li><a href="">Another nav item</a></li>
+    <li><a href="">More navigation</a></li>
+  </ul>
+  <ul class="nav nav-sidebar">
+    <li><a href="">Nav item again</a></li>
+    <li><a href="">One more nav</a></li>
+    <li><a href="">Another nav item</a></li>
+  </ul>
+</div>
+
+<div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+  <h1 class="page-header">Boots</h1>
+  <div class="row placeholders">
+  <%  @users.each do |user| %>
+    <div class="col-xs-6 col-sm-3 placeholder">
+      <img src="<%= user.profile_image %>" width="200" height="200" class="img-responsive" alt="profile image">
+      <h4><%= user.first_name %> <%= user.last_name %></h4>
+      <% user.cohorts.each do |cohort| %>
+        <span class="text-muted"><%= cohort %></span>
+      <% end %>
+    </div>
+  <% end %>
+  </div>
+</div>
+
