--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,6 @@
 <div class="col-sm-3 col-md-2 sidebar">
-  <div class="row placeholders">
-    <div class="col-xs-6 col-sm-3 placeholder">
+  <div class="row placeholders-sidebar">
+    <div class="col-xs-6 col-sm-3 placeholder-sidebar">
       <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" width="200" height="200" class="img-responsive" alt="Generic placeholder thumbnail">
       <h4>User's Name</h4>
       <span class="text-muted">User's Cohort</span>
@@ -15,7 +15,9 @@
       <!-- Down to here. -->
     </div>
   </div>
-  <ul class="nav nav-sidebar">
+  <!-- This is what Bootstrap's template provided. -->
+  <!-- We'll want to do our own thing here, probably search filters. -->
+  <!--   <ul class="nav nav-sidebar">
     <li class="active"><a href="#">Overview <span class="sr-only">(current)</span></a></li>
     <li><a href="#">Reports</a></li>
     <li><a href="#">Analytics</a></li>
@@ -32,7 +34,7 @@
     <li><a href="">Nav item again</a></li>
     <li><a href="">One more nav</a></li>
     <li><a href="">Another nav item</a></li>
-  </ul>
+  </ul> -->
 </div>
 
 <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
