Add incomplete Bootstrap social icon styling

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,5 @@
 <div class="jumbotron github-login">
-  <a href="#">Github Authentication Link</a>
+   <a class="btn btn-block btn-social btn-github">
+    <span class="fa fa-github"></span> Sign in with Github
+  </a>
 </div>
