--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,3 @@
 <div class="jumbotron github-login">
-  <a href="#">Github Authentication Link</a>
+  <%= link_to 'Sign in with Github', signin_path %>
 </div>
