updated and added forms to edit and show

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -53,6 +53,14 @@
     <p>Role: <%= @user.role %></p>
   </div>
   <% end %>
+  <!-- Interests -->
+  <div class='interests-info'>
+    <p>Interests: <%= @user.love %></p>
+    <% @user.interests.each do |interest| %>
+      <p><%= interest %></p>
+    <% end %>
+    </p>
+  </div>
 
 
 
