--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,8 +20,7 @@
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 
-    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
-
+    <script src="https://use.fontawesome.com/0bd70f2800.js"></script>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
@@ -40,15 +39,15 @@
           <a class="navbar-brand" href="#">BootBook</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
-          <!-- If current_user, show these -->
+          <% if current_user %>
           <ul class="nav navbar-nav navbar-right">
             <li><a href="#">Profile</a></li>
             <li><a href="#">Logout</a></li>
           </ul>
+          <% end %>
           <form class="navbar-form navbar-right">
             <input type="text" class="form-control" placeholder="Search Boots...">
           </form>
-          <!--  -->
         </div>
       </div>
     </nav>
