--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,13 +36,13 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">BootBook</a>
+          <a class="navbar-brand" href="/users">BootBook</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <% if current_user %>
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#">Profile</a></li>
-            <li><a href="#">Logout</a></li>
+            <li><a href="/users/<%= current_user.id %>">Profile</a></li>
+            <li><a href="/signout">Sign Out</a></li>
           </ul>
           <% end %>
           <form class="navbar-form navbar-right">
@@ -70,7 +70,7 @@
     <div class="container">
       <footer class="footer">
         <small>
-          Copyright &copy; <a href="https://github.com"> BootBook </a>
+          Copyright &copy; 2016 <a href="/users">BootBook</a>
         </small>
       </footer>
     </div>
