--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -18,6 +18,24 @@
 
               <div class="form-group">
                 <div class="control-label col-sm-2">
+                  <%= f.label :quirk! %>
+                </div>
+                <div class="col-sm-8">
+                  <%= f.text_field :quirk, class: "form-control", placeholder: "I have a flip phone.", autofocus: true %>
+                </div>
+              </div>
+
+              <div class="form-group">
+                <div class="control-label col-sm-2">
+                  <%= f.label :love %>
+                </div>
+                <div class="col-sm-8">
+                  <%= f.text_field :love, class: "form-control", placeholder: "Tea.", autofocus: true %>
+                </div>
+              </div>
+
+              <div class="form-group">
+                <div class="control-label col-sm-2">
                   <%= f.label :city %>
                 </div>
                 <div class="col-sm-8">
