reconifigure and implment conversations controller

--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -16,3 +16,12 @@ Conversation with <%=@other.name %>
     <%= f.submit "Send Message", class: "btn btn-primary" %>
   </div>
 <% end %>
+
+<% @conversation.messages.reverse.each do |message| %>
+  <% if message.user_id == current_user.id %>
+    <p><strong><%= current_user.name %></strong> : <%= message.content %></p>
+  <% else %>
+
+    <p><strong><%= User.find(@conversation.sender_id).name %></strong> : <%= message.content %></p>
+  <% end %>
+<% end %>
