--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -16,12 +16,15 @@ Conversation with <%=@other.name %>
     <%= f.submit "Send Message", class: "btn btn-primary" %>
   </div>
 <% end %>
-
+<div>
 <% @conversation.messages.reverse.each do |message| %>
   <% if message.user_id == current_user.id %>
-    <p><strong><%= current_user.name %></strong> : <%= message.content %></p>
-  <% else %>
-
+  <p display=><strong><%= current_user.name %></strong> : <%= message.content %></p>
+  <% elsif message.user_id == @conversation.sender_id %>
     <p><strong><%= User.find(@conversation.sender_id).name %></strong> : <%= message.content %></p>
+  <% else %>
+    <p><strong><%= User.find(@conversation.recipient_id).name %></strong> : <%= message.content %></p>
   <% end %>
 <% end %>
+
+</div>
