--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,4 +1,4 @@
-<h1> Hey </h1>
+<h1> Hey yayayah Hey yayaya</h1>
 <%= @other.name %>
 <%= link_to "View Profile", @other, class: "btn btn-default wide" %>
 ​
@@ -6,7 +6,17 @@
 
 </div>
 Conversation with <%=@other.name %>
-​
+​<div>
+<% @conversation.messages.each do |message| %>
+  <% if message.user_id == @conversation.sender_id %>
+    <p><strong><%= User.find(@conversation.sender_id).name %></strong> : <%= message.content %></p>
+  <% elsif message.user_id == @conversation.recipient_id %>
+    <p><strong><%= User.find(@conversation.recipient_id).name %></strong> : <%= message.content %></p>
+  <% end %>
+<% end %>
+
+</div>
+
 <%=form_for [@conversation, @conversation.messages.new] do |f| %>
   <div class="form-group">
     <%=f.text_area :content, id: "new_message", placeholder: "Create new message", class: "form-control" %>
@@ -16,15 +26,4 @@ Conversation with <%=@other.name %>
     <%= f.submit "Send Message", class: "btn btn-primary" %>
   </div>
 <% end %>
-<div>
-<% @conversation.messages.reverse.each do |message| %>
-  <% if message.user_id == current_user.id %>
-  <p display=><strong><%= current_user.name %></strong> : <%= message.content %></p>
-  <% elsif message.user_id == @conversation.sender_id %>
-    <p><strong><%= User.find(@conversation.sender_id).name %></strong> : <%= message.content %></p>
-  <% else %>
-    <p><strong><%= User.find(@conversation.recipient_id).name %></strong> : <%= message.content %></p>
-  <% end %>
-<% end %>
 
-</div>
