--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,26 +1,33 @@
 <div class="container">
   <div class="row">
     <div class="col-md-6 col-md-offset-3">
-      <h1> BootMessager</h1>
-      <div id="converse">
-         Conversation with <%=@other.name %><%= link_to "View Profile", @other, class: "btn btn-default wide" %>
+      <div>
+        <% if @conversation.variety.variety == 'mentorship' %>
+          <h1><i class="fa fa-graduation-cap" aria-hidden="true"></i> Mentorship Conversation with <%= @other.name %></h1>
+        <% elsif @conversation.variety.variety == 'collaboration' %>
+          <h1><i class="fa fa-puzzle-piece" aria-hidden="true"></i> Collaboration Conversation with <%= @other.name %></h1>
+        <% else %>
+          <h1><i class="fa fa-paper-plane" aria-hidden="true"></i> Conversation with <%= @other.name %></h1>
+        <% end %>
+        <div id="converse">
+        <%= link_to "#{@other.name}'s Profile", @other, class: "btn btn-default wide" %>
+      </div><br>
 
-         ​<div>
-         <% @conversation.messages.each do |message| %>
-           <% if message.user_id == @conversation.sender_id %>
-             <div class="sender-message">
-               <div class="time-stamp"><%= message.created_at.strftime('%a, %d %b %Y %H:%M:%S') %></div>
-               <p><strong><%= User.find(@conversation.sender_id).name %></strong> : <%= message.content %></p>
-             </div>
-           <% elsif message.user_id == @conversation.recipient_id %>
-             <div class="recipient-message">
-               <div class="time-stamp"><%= message.created_at.strftime('%a, %d %b %Y %H:%M:%S') %></div>
-               <p><strong><%= User.find(@conversation.recipient_id).name %></strong> : <%= message.content %></p>
-             </div>
-           <% end %>
-         <% end %>
-
-         </div>
+      <div>
+        <% @conversation.messages.each do |message| %>
+          <% if message.user_id == @conversation.sender_id %>
+           <div class="sender-message">
+            <div class="time-stamp"><%= message.created_at.strftime('%a, %d %b %Y %H:%M:%S') %></div>
+            <p><strong><%= User.find(@conversation.sender_id).name %></strong> : <%= message.content %></p>
+            </div>
+          <% elsif message.user_id == @conversation.recipient_id %>
+            <div class="recipient-message">
+            <div class="time-stamp"><%= message.created_at.strftime('%a, %d %b %Y %H:%M:%S') %></div>
+            <p><strong><%= User.find(@conversation.recipient_id).name %></strong> : <%= message.content %></p>
+            </div>
+          <% end %>
+        <% end %>
+      </div>
 
          <%=form_for [@conversation, @conversation.messages.new] do |f| %>
            <div class="form-group">
