--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -94,23 +94,26 @@
         <%= hidden_field_tag(:conversation_variety_id, "1") %>
         <%= hidden_field_tag(:recipient_id, @user.id) %>
         <%= hidden_field_tag(:sender_id, current_user.id) %>
-        <%= submit_tag("Message") %>
+        <%= button_tag(type: "submit", class: "default-message btn btn-primary btn-small") do %>
+          <i class="fa fa-paper-plane" aria-hidden="true"></i> Message
+        <% end %>
       <% end %>
       <%= form_tag("/conversations", method: "post") do %>
         <%= hidden_field_tag(:conversation_variety_id, "2") %>
         <%= hidden_field_tag(:recipient_id, @user.id) %>
         <%= hidden_field_tag(:sender_id, current_user.id) %>
-        <%= submit_tag("Mentor") %>
+        <%= button_tag(type: "submit", class: "default-message btn btn-primary btn-small") do %>
+          <i class="fa fa-graduation-cap" aria-hidden="true"></i> Mentor
+        <% end %>
       <% end %>
       <%= form_tag("/conversations", method: "post") do %>
         <%= hidden_field_tag(:conversation_variety_id, "3") %>
         <%= hidden_field_tag(:recipient_id, @user.id) %>
         <%= hidden_field_tag(:sender_id, current_user.id) %>
-        <%= submit_tag("Collaborate") %>
+        <%= button_tag(type: "submit", class: "default-message btn btn-primary btn-small") do %>
+          <i class="fa fa-puzzle-piece" aria-hidden="true"></i> Collab
+        <% end %>
       <% end %>
-      <!-- <a href="/conversations"><button type="button" class="default-message btn btn-primary btn-small">Message</button></a> -->
-      <!-- <a href="/conversations"><button type="button" class="mentor-message btn btn-primary btn-small"><i class="fa fa-graduation-cap" aria-hidden="true"></i> Mentor</button></a>
-      <a href="/conversations"><button type="button" class="collaborate-message btn btn-primary btn-small"><i class="fa fa-puzzle-piece" aria-hidden="true"></i> Collab</button></a> -->
     </div>
   <% end %>
 </div>
