--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,7 +49,7 @@
           <form class="navbar-form navbar-right" action="/users/search" method="get">
             <input list="findaboot" name="boot_name" class="form-control" placeholder="Find a boot..." />
             <datalist id="findaboot">
-            <% @users.each do |user| %>
+            <% @all_users.each do |user| %>
               <option value="<%= user.name %>"></option>
             <% end %>
             </datalist>
