--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -11,26 +11,19 @@
       </p>
     </div>
   </div>
-  <!-- This is what Bootstrap's template provided. -->
-  <!-- We'll want to do our own thing here, probably search filters. -->
-  <!--   <ul class="nav nav-sidebar">
-    <li class="active"><a href="#">Overview <span class="sr-only">(current)</span></a></li>
-    <li><a href="#">Reports</a></li>
-    <li><a href="#">Analytics</a></li>
-    <li><a href="#">Export</a></li>
-  </ul>
-  <ul class="nav nav-sidebar">
-    <li><a href="">Nav item</a></li>
-    <li><a href="">Nav item again</a></li>
-    <li><a href="">One more nav</a></li>
-    <li><a href="">Another nav item</a></li>
-    <li><a href="">More navigation</a></li>
-  </ul>
-  <ul class="nav nav-sidebar">
-    <li><a href="">Nav item again</a></li>
-    <li><a href="">One more nav</a></li>
-    <li><a href="">Another nav item</a></li>
-  </ul> -->
+
+  <div>
+    <form class="navbar-form navbar-right" action="/users" method="get">
+      <input list="find-city" name="city" class="form-control" placeholder="City" />
+      <datalist id="find-city">
+      <% @cities.each do |city| %>
+        <option value="<%= city %>"></option>
+      <% end %>
+      </datalist>
+    </form>
+
+
+  </div>
 </div>
 
 <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
