Update cohort options to match cohort-year seed format

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -76,7 +76,7 @@
                 </div>
                 <div class="col-sm-8">
                   <%= fields_for :cohorts do |i| %>
-                  <%= i.select(:name, [['Nighthawks', 'Nighthawks'], ['Pocket Gophers', 'Pocket Gophers'], ['Fiery Skippers', 'Fiery Skippers']]) %>
+                  <%= i.select(:name, [['Nighthawks 2016', 'Nighthawks 2016'], ['Pocket Gophers 2016', 'Pocket Gophers 2016'], ['Fiery Skippers 2016', 'Fiery Skippers 2016']]) %>
                   <%= i.select(:campus, [['San Francisco', 'San Francisco']]) %>
                   <%= i.select(:graduation_date, [['June 10, 2016', '2016-06-10'], ['July 1, 2016', '2016-07-01'], ['July 29, 2016', '2016-07-29']]) %>
                   <% end %>
