change default email address to reflect current heroku web address

--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -4,9 +4,9 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h1> Welcome to boot@bootbook.com, <%= @user.name %></h1>
+    <h1> Welcome to bootbook.herokuapp.com, <%= @user.name %></h1>
     <p>
-      You have successfully signed up via Github to bootbook.com. We look forward to having you as a productive member of this community.<br>
+      You have successfully signed up via Github to bootbook.herokuapp.com. We look forward to having you as a productive member of this community.<br>
     </p>
   </body>
 </html>
