--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,21 +1,12 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-6 col-md-offset-3">
+    <div class="col-md-8 col-md-offset-2">
       <div class="panel panel-primary">
-        <div class="panel-heading">Update Your BootBook Profile</div>
+        <div class="panel-heading"><strong>Hi <%= @user.name.split(' ').shift %>!</strong></div>
           <div class="panel-body">
             <%= form_for(@user, :html => {class: "form-horizontal", role: "form"}) do |f| %>
 
-              <!-- Personal Info -->
-              <div class="form-group">
-                <div class="control-label col-sm-2">
-                  <%= f.label :name %>
-                </div>
-                <div class="col-sm-8">
-                  <%= f.text_field :name, class: "form-control", placeholder: "Enter Name", autofocus: true %>
-                </div>
-              </div>
-
+              <!-- DBC Info -->
               <div class="form-group">
                 <div class="control-label col-sm-2">
                   <%= f.label :quirk! %>
@@ -34,6 +25,7 @@
                 </div>
               </div>
 
+              <!-- Location Info -->
               <div class="form-group">
                 <div class="control-label col-sm-2">
                   <%= f.label :city %>
@@ -70,26 +62,106 @@
                 </div>
               </div>
 
-              <div class="form group">
+              <!-- Cohort Info -->
+              <div class="form-group">
                 <div class="control-label col-sm-2">
                   <%= f.label :cohorts %>
                 </div>
                 <div class="col-sm-8">
                   <%= fields_for :cohorts do |i| %>
+                  <!-- FUNKY: Make this populate out of the database -->
                   <%= i.select(:name, [['Nighthawks 2016', 'Nighthawks 2016'], ['Pocket Gophers 2016', 'Pocket Gophers 2016'], ['Fiery Skippers 2016', 'Fiery Skippers 2016']]) %>
+                  <!-- FUNKY: Make this populate out of the database -->
                   <%= i.select(:campus, [['San Francisco', 'San Francisco']]) %>
-                  <%= i.select(:graduation_date, [['June 10, 2016', '2016-06-10'], ['July 1, 2016', '2016-07-01'], ['July 29, 2016', '2016-07-29']]) %>
+                  <!-- FUNKY: Make this populate out of the database -->
                   <% end %>
                 </div>
               </div>
 
+              <!-- The following does not display the first time the user signs in. -->
+              <!-- This is a hack-y way of checking whether their primary information has been filled in yet. -->
+              <% if current_user.city  %>
+              <!-- Social Media Links -->
+	            <div class="form-group">
+                <div class="control-label col-sm-2">
+                  <%= f.label :linkedin %>
+                </div>
+                <div class="col-sm-8">
+                  <%= f.text_field :linkedin, class: "form-control", placeholder: "Enter linkedin", autofocus: true %>
+                </div>
+	            </div>
+            ​
+	            <div class="form-group">
+                <div class="control-label col-sm-2">
+                  <%= f.label :facebook %>
+                </div>
+                <div class="col-sm-8">
+                  <%= f.text_field :facebook, class: "form-control", placeholder: "Enter facebook", autofocus: true %>
+                </div>
+	            </div>
+            ​
+		          <div class="form-group">
+	              <div class="control-label col-sm-2">
+                  <%= f.label :twitter %>
+	              </div>
+	              <div class="col-sm-8">
+                  <%= f.text_field :twitter, class: "form-control", placeholder: "Enter twitter", autofocus: true %>
+	              </div>
+		          </div>
+            ​
+		          <div class="form-group">
+	              <div class="control-label col-sm-2">
+                  <%= f.label :employ %>
+	              </div>
+	              <div class="col-sm-8">
+                  <%= f.text_field :employ, class: "form-control", placeholder: "Enter employ", autofocus: true %>
+	              </div>
+		          </div>
+            ​
+		          <div class="form-group">
+		            <div class="control-label col-sm-2">
+		              <%= f.label :personal_website %>
+		            </div>
+		            <div class="col-sm-8">
+		              <%= f.text_field :personal_website, class: "form-control", placeholder: "Enter personal_website", autofocus: true %>
+		            </div>
+		          </div>
+
+	            <div class="form-group">
+	              <div class="col-sm-offset-2 col-sm-10">
+	                <%= f.submit class: "btn btn-default"%>
+	              </div>
+	            </div>
+
+	            <!-- Employment Info -->
+	            <div class="form-group">
+                  <div class="control-label col-sm-2">
+                      <%= f.label :employer %>
+                  </div>
+                  <div class="col-sm-8">
+                      <%= f.text_field :employer, class: "form-control", placeholder: "Enter Employer", autofocus: true %>
+                  </div>
+              </div>
+​
               <div class="form-group">
-                  <div class="col-sm-offset-2 col-sm-10">
-                    <%= f.submit class: "btn btn-default"%>
+                  <div class="control-label col-sm-2">
+                      <%= f.label :role %>
+                  </div>
+                  <div class="col-sm-8">
+                      <%= f.text_field :role, class: "form-control", placeholder: "Enter role", autofocus: true %>
+                  </div>
+              </div>
+​
+              <div class="form-group">
+                  <div class="control-label col-sm-2">
+                      <%= f.label :salary %>
+                  </div>
+                  <div class="col-sm-8">
+                      <%= f.text_field :salary, class: "form-control", placeholder: "Enter salary", autofocus: true %>
                   </div>
               </div>
 
-
+            	<% end %>
             <% end %>
 
           </div>
@@ -98,5 +170,3 @@
     </div>
   </div>
 </div>
-
-
