--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,11 @@
     <script src="https://use.fontawesome.com/0bd70f2800.js"></script>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <!-- < %= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %> -->
+    <!-- turn off turbolinks for now (map branch) -->
+    <%= javascript_include_tag 'application' %>
+    <!-- < %= render '/layouts/bootbook.js' %> -->
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=<%= ENV['GOOGLE_SECRET_KEY'] %>&libraries=places"></script>
   </head>
 
   <body>
