Fix sidebar image size on users/index

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,6 @@
 <div class="col-sm-3 col-md-2 sidebar">
   <div class="row placeholders-sidebar">
-    <div class="col-xs-6 col-sm-3 placeholder-sidebar">
+    <div class="col-m-6 col-m-3 placeholder-sidebar">
       <img src="<%= current_user.profile_image %>" width="200" height="200" class="img-responsive" alt="Generic placeholder thumbnail">
       <h4><%= current_user.name %></h4>
       <p><span class="text-muted"><%= current_user.cohorts.last.campus %></span>
