Improve sidebar styling and display in users/index and users/show

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,14 +1,19 @@
 <div class="col-sm-3 col-md-2 sidebar">
   <div class="row placeholders-sidebar">
     <div class="col-m-6 col-m-3 placeholder-sidebar">
-      <img src="<%= current_user.profile_image %>" width="200" height="200" class="img-responsive" alt="Generic placeholder thumbnail">
-      <h4><%= current_user.name %></h4>
-      <p><span class="text-muted"><%= current_user.cohorts.last.campus %></span>
-      <span class="text-muted"><%= current_user.cohorts.last.graduation_date.to_s.slice(0,4) %></span>
-        <% current_user.cohorts.each do |cohort| %>
-        <span class="text-muted"><%= cohort.name %></span>
-      <% end %>
-      </p>
+      <img src="<%= current_user.profile_image %>" width="200" height="200" class="img-responsive" alt="Boot profile image">
+      <h4><%=  current_user.name %></h4>
+      <span class="text-muted"><%= current_user.cohorts.last.name %>
+        <br>
+        <%= current_user.cohorts.last.campus %>
+        <br>
+        <% if current_user.is_graduate %>
+          Graduate
+        <% else %>
+          Student
+        <% end %>
+      </span>
+
     </div>
   </div>
 
